add kitty config
- update tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,7 @@ set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark'
 # set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
-set-option -sa terminal-features ',xterm-kitty:RGB'
+set-option -as terminal-overrides ",xterm*:RGB"
+set-option -sa terminal-features ",xterm-kitty:RGB"
 
 run '~/.tmux/plugins/tpm/tpm'
