--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,15 @@ set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark'
 # set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
-set-option -as terminal-overrides ",xterm*:RGB"
-set-option -sa terminal-features ",xterm-kitty:RGB"
+# set-option -as terminal-overrides ",xterm*:RGB"
+# set-option -sa terminal-features ",xterm-kitty:RGB"
+
+set -g default-terminal "tmux-256color"
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
+set-option -ga terminal-overrides "alacritty:Tc"
+
+set-option -g default-command /usr/bin/fish
+set-option -g default-shell /usr/bin/fish
 
 run '~/.tmux/plugins/tpm/tpm'
