--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,6 @@
+[shell]
+program = "/usr/bin/fish"
+
 [colors.bright]
 black = "#928374"
 blue = "#7daea3"
@@ -27,14 +30,14 @@ TERM = "alacritty"
 WINIT_X11_SCALE_FACTOR = "1"
 
 [font]
-size = 12.0
+size = 13.0
 
 [font.bold]
-family = "FiraCode Nerd Font Mono"
+family = "Liga SFMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "FiraCode Nerd Font Mono"
+family = "Liga SFMono Nerd Font"
 style = "Medium"
 
 [font.glyph_offset]
@@ -42,11 +45,11 @@ x = 0
 y = 0
 
 [font.italic]
-family = "FiraCode Nerd Font Mono"
+family = "Liga SFMono Nerd Font"
 style = "Regular"
 
 [font.normal]
-family = "FiraCode Nerd Font Mono"
+family = "Liga SFMono Nerd Font"
 style = "Regular"
 
 [font.offset]
@@ -57,5 +60,5 @@ y = 0
 opacity = 1.0
 
 [window.padding]
-x = 10
-y = 10
+x = 5
+y = 3
