--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
 set-option -ga terminal-overrides "alacritty:Tc"
 
-set-option -g default-command /usr/bin/fish
-set-option -g default-shell /usr/bin/fish
+set-option -g default-command /usr/local/bin/fish
+set-option -g default-shell /usr/local/bin/fish
 
 run '~/.tmux/plugins/tpm/tpm'
