--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,10 +18,15 @@ copy_on_select no
 scrollback_lines 20000
 window_padding_width 2
 
-font_family       FiraCode Nerd Font
-bold_font         FiraCode Nerd Font
-italic_font       FiraCode Nerd Font
-bold_italic_font  FiraCode Nerd Font
+font_family       Liga SFMono Nerd Font
+bold_font         Liga SFMono Nerd Font
+italic_font       Liga SFMono Nerd Font
+bold_italic_font  Liga SFMono Nerd Font
+
+# font_family       FiraCode Nerd Font
+# bold_font         FiraCode Nerd Font
+# italic_font       FiraCode Nerd Font
+# bold_italic_font  FiraCode Nerd Font
 
 # font_family       Source Code Pro
 # bold_font         Source Code Pro
