--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,11 @@ set-option -g mouse on
 bind | split-window -h
 bind - split-window -v
 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
