tmux: support C-Tab and C-S-Tab in tmux for navigation
- alacritty: bind the correct tab keyboard character
- neovim: clean up old plugins
- neovim: support editing large files without all  plugins

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -62,3 +62,10 @@ opacity = 1.0
 [window.padding]
 x = 5
 y = 3
+
+[keyboard]
+bindings = [
+  { key = "Tab", mods = "Control", chars = "\u001b[27;5;9~" },
+  { key = "Tab", mods = "Control|Shift", chars = "\u001b[27;6;9~" },
+]
+
