--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind-key -n C-Tab next-window
+bind-key -n C-S-Tab previous-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
