--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 unbind-key C-b
 
-set-option -g prefix C-a
+set-option -g prefix C-b
 
-bind-key C-a send-prefix
+bind-key C-b send-prefix
 
 set -s escape-time 5
 set -g base-index 1
